# lotr-octgn

./: .gitignore  .gitmodules  Cargo.toml  LotR set editor.xlsm  README.md
fixtures/: hob.json  set.xml
fixtures/lotr/hob/: card_sets.json
fixtures/octgn/: LotR master DB.xlsm
fixtures/octgn/o8g/: definition.xml
o8g/Decks/Nightmare/: Campaign-Nightmare-04-The-Ring-Goes-South.o8d  Campaign-Nightmare-05-Journey-in-the-Dark.o8d  Campaign-Nightmare-07-The-Uruk-hai.o8d  Campaign-Nightmare-10-The-Passage-of-the-Marshes.o8d  Campaign-Nightmare-11-Journey-to-the-Cross-roads.o8d  Nightmare-037-The-Fords-of-Isen.o8d  Nightmare-040-The-Dunland-Trap.o8d  Nightmare-042-Trouble-in-Tharbad.o8d  Nightmare-044-Journey-in-the-Dark.o8d  Nightmare-045-Breaking-of-the-Fellowship.o8d  Nightmare-046-The-Nin-in-Eilph.o8d  Nightmare-047-Celebrimbor's-Secret.o8d  Nightmare-048-The-Antlered-Crown.o8d  Nightmare-049-Intruders-in-Chetwood.o8d  Nightmare-050-The-Weather-Hills.o8d  Nightmare-057-Escape-from-Mount-Gram.o8d  Nightmare-060-The-Battle-of-Carn-Dum.o8d  Nightmare-066-The-Thing-in-the-Depths.o8d
o8g/Decks/Quests/: Campaign-13-The-Passing-of-the-Grey-Company.o8d  Campaign-14-The-Siege-of-Gondor.o8d  Campaign-15-The-Battle-of-the-Pelennor-Fields.o8d  Campaign-17-The-Black-Gate-Opens.o8d  Quest-022-Peril-In-Pelargir.o8d  Quest-068-The-Thing-in-the-Depths.o8d  Quest-072-The-Battle-of-the-Pelennor-Fields.o8d  Quest-074-A-Storm-on-Cobas-Haven.o8d  Quest-075-The-City-of-Corsairs.o8d  (+2 more)
src/: arkhamdb.rs  git_cache.rs  hall_of_beorn.rs  lib.rs  main.rs  octgn.rs
src/tests/: fixtures.rs
(+128 files in other folders)
