[package]
name = "lotr-octgn"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "1.0"
docopt = "1"
fs_extra = "1.1.0"
git2 = "0.7"
indicatif = "0.10.3"
rayon = "1.0"
roxmltree = "0.2"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strsim = "0.8.0"
tempdir = "0.3"
walkdir = "2"
zip = "0.4"

[dev-dependencies]
mockito = "0.14.0"
